stateDiagram-v2
    [*] --> queued : atomic admission accepted
    queued --> running : SearchRunService starts
    running --> paused : pause command
    paused --> running : resume command
    running --> stopping : trial/budget/time/stagnation stop
    stopping --> draining : no new candidates; wait queued/running jobs
    draining --> completed : all accepted candidates terminal
    running --> cancelled : cancel command
    paused --> cancelled : cancel command
    draining --> cancelled : cancel command
    running --> failed : unrecoverable orchestration error
    queued --> cancelled : cancel before start
    completed --> [*]
    failed --> [*]
    cancelled --> [*]

    note right of running
        Stop conditions bắt buộc:
        Discovery: 500 trials, 2 active hours,
        quota/budget exhausted, or 100 terminal
        trials without >= .02 improvement.
    end note

    note right of draining
        Pause: no next candidate admission.
        Cancel: no future work or final test;
        running work follows cooperative cancellation policy.
    end note

